--- a/i3/config
+++ b/i3/config
@@ -30,7 +30,7 @@ font pango:Droid Sans Mono 9
 floating_modifier $mod
 
 # start a terminal
-bindsym $mod+Return exec i3-sensible-terminal
+bindsym $mod+Return exec urxvt
 
 # kill focused window
 bindsym $mod+Shift+q kill
@@ -115,12 +115,6 @@ mode "resize" {
         # Pressing right will grow the window’s width.
         # Pressing up will shrink the window’s height.
         # Pressing down will grow the window’s height.
-        bindsym j resize shrink width 10 px or 10 ppt
-        bindsym k resize grow height 10 px or 10 ppt
-        bindsym l resize shrink height 10 px or 10 ppt
-        bindsym semicolon resize grow width 10 px or 10 ppt
-
-        # same bindings, but for the arrow keys
         bindsym Left resize shrink width 10 px or 10 ppt
         bindsym Down resize grow height 10 px or 10 ppt
         bindsym Up resize shrink height 10 px or 10 ppt
@@ -175,7 +169,7 @@ exec --no-startup-id onboard
 exec --no-startup-id nitrogen --restore
 exec --no-startup-id /opt/urserver/urserver --daemon 
 exec --no-startup-id touchegg
-exec --no-startup-id xcompmgr
+exec --no-startup-id compton -b --vsync opengl
 exec --no-startup-id kalu
 exec --no-startup-id connman-ui-gtk
 
