Made it more efficient

--- a/touchegg/touchegg.conf
+++ b/touchegg/touchegg.conf
@@ -1,41 +1,34 @@
 <touchégg>
-    
-    <settings>
-        <property name="composed_gestures_time">0</property>
-    </settings>
-    
-
-    <application name="All">
-        
-        <gesture type="DRAG" fingers="1" direction="RIGHT">
-            <action type="CHANGE_DESKTOP">PREVIOUS</action>
-        </gesture>
-        
-        <gesture type="DRAG" fingers="1" direction="LEFT">
-            <action type="CHANGE_DESKTOP">NEXT</action>
-        </gesture>
-
-        <gesture type="DRAG" fingers="1" direction="DOWN">
-            <action type="SCROLL">SPEED=3:INVERTED=true</action>
-        </gesture>
-
-        <gesture type="DRAG" fingers="1" direction="UP">
-            <action type="SCROLL">SPEED=3:INVERTED=true</action>
-        </gesture>
-
-        <gesture type="DRAG" fingers="2" direction="DOWN">
-            <action type="RUN_COMMAND">j4-dmenu-desktop</action>
-        </gesture>
-
-        <gesture type="DRAG" fingers="2" direction="UP">
-            <action type="RUN_COMMAND">keyboard</action>
-        </gesture>
-
-        <gesture type="DRAG" fingers="3" direction="UP">
-            <action type="SCROLL">SPEED=3:INVERTED=true</action>
-        </gesture>
-
-
-    </application>
-
+	<settings>
+		<property name="composed_gestures_time">0</property>
+	</settings>
+	<application name="All">
+		<gesture type="DRAG" fingers="1" direction="LEFT">
+			<action type="SCROLL">SPEED=3:INVERTED=true</action>
+		</gesture>
+		<gesture type="DRAG" fingers="2" direction="DOWN">
+			<action type="RUN_COMMAND">j4-dmenu-desktop</action>
+		</gesture>
+		<gesture type="DRAG" fingers="1" direction="DOWN">
+			<action type="SCROLL">SPEED=3:INVERTED=true</action>
+		</gesture>
+		<gesture type="DRAG" fingers="2" direction="RIGHT">
+			<action type="CHANGE_DESKTOP">PREVIOUS</action>
+		</gesture>
+		<gesture type="DRAG" fingers="1" direction="UP">
+			<action type="SCROLL">SPEED=3:INVERTED=true</action>
+		</gesture>
+		<gesture type="DRAG" fingers="1" direction="RIGHT">
+			<action type="SCROLL">SPEED=3:INVERTED=true</action>
+		</gesture>
+		<gesture type="TAP" fingers="2" direction="">
+			<action type="MOUSE_CLICK">BUTTON=3</action>
+		</gesture>
+		<gesture type="DRAG" fingers="2" direction="UP">
+			<action type="RUN_COMMAND">keyboard</action>
+		</gesture>
+		<gesture type="DRAG" fingers="2" direction="LEFT">
+			<action type="CHANGE_DESKTOP">NEXT</action>
+		</gesture>
+	</application>
 </touchégg>
