--- a/mpd/mpd.conf
+++ b/mpd/mpd.conf
@@ -266,7 +266,7 @@ input {
 #
 #audio_output {
 #	type		"httpd"
-#	name		"My HTTP Stream"
+#	name		"SteelStream"
 #	encoder		"vorbis"		# optional, vorbis or lame
 #	port		"8000"
 #	bind_to_address	"0.0.0.0"		# optional, IPv4 or IPv6
