Updated for use on an x86-64 computer

--- a/systemd/interface.service
+++ b/systemd/interface.service
@@ -5,5 +5,5 @@ Description=Run the interface script
 Type=oneshot
 KillMode=none
 Environment="DISPLAY=:0"
-Environment="PATH=/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/home/steelcowboy/.config/i3/panel:/home/steelcowboy/bin"
+Environment="PATH=/usr/bin:/home/steelcowboy/.config/i3/panel"
 ExecStart=/home/steelcowboy/bin/interface.sh
