Whole lotta changes

--- a/mpd/mpd.conf
+++ b/mpd/mpd.conf
@@ -10,7 +10,7 @@
 # be disabled and audio files will only be accepted over ipc socket (using
 # file:// protocol) or streaming files over an accepted protocol.
 #
-music_directory		"/srv/deluge/Downloads/Music"
+music_directory		"~/Music"
 #
 # This setting sets the MPD internal playlist directory. The purpose of this
 # directory is storage for playlists created by MPD. The server will use 
@@ -206,15 +206,15 @@ input {
 #
 # An example of an ALSA output:
 #
-audio_output {
-	type		"alsa"
-	name		"My ALSA Device"
+#audio_output {
+#	type		"alsa"
+#	name		"My ALSA Device"
 ##	device		"hw:0,0"	# optional
 ##	mixer_type      "hardware"	# optional
 ##	mixer_device	"default"	# optional
 ##	mixer_control	"PCM"		# optional
 ##	mixer_index	"0"		# optional
-}
+#}
 #
 # An example of an OSS output:
 #
@@ -278,12 +278,19 @@ audio_output {
 #
 # An example of a pulseaudio output (streaming to a remote pulseaudio server)
 #
-#audio_output {
-#	type		"pulse"
-#	name		"pulse audio"
+audio_output {
+	type		"pulse"
+	name		"pulse audio"
 ##	server		"remote_server"		# optional
 ##	sink		"remote_server_sink"	# optional
-#}
+}
+
+audio_output {
+    type                    "fifo"
+    name                    "my_fifo"
+    path                    "/tmp/mpd.fifo"
+    format                  "44100:16:2"
+}
 #
 # An example of a winmm output (Windows multimedia API).
 #
