--- a/tmux.conf
+++ b/tmux.conf
@@ -33,4 +33,4 @@ set-window-option -g clock-mode-colour colour64 #green
 # 256 color
 set -g default-terminal "screen-256color"
 
-
+bind-key -n C-a send-prefix
