Use powerline and st now

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,5 +1,9 @@
 #### COLOUR (Solarized 256)
 
+source "/usr/lib/python3.5/site-packages/powerline/bindings/tmux/powerline.conf"
+
+# set -g status-right '#(rainbarf)'
+
 # default statusbar colors
 set-option -g status-bg colour235 #base02
 set-option -g status-fg colour136 #yellow
