--- a/i3/config
+++ b/i3/config
@@ -30,13 +30,13 @@ font pango:Droid Sans Mono 9
 floating_modifier $mod
 
 # start a terminal
-bindsym $mod+Return exec urxvtc
+bindsym $mod+Return exec st -f "Droid Sans Mono:pixelsize=16"  
 
 # kill focused window
 bindsym $mod+Shift+q kill
 
 # start j4-dmenu-desktop (an application launcher)
-bindsym Menu exec j4-dmenu-desktop
+bindsym $mod+m exec rofi -show combi 
 
 # alternatively, you can use the cursor keys:
 bindsym $mod+Left focus left
@@ -105,7 +105,7 @@ bindsym $mod+Shift+c reload
 # restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
 bindsym $mod+Shift+r restart
 # exit i3 (logs you out of your X session)
-bindsym $mod+Shift+e exec wm-quit
+bindsym $mod+Shift+e exec i3
 # resize window (you can also use the mouse for that)
 mode "resize" {
         # These bindings trigger as soon as you enter the resize mode
@@ -138,10 +138,10 @@ bindsym $mod+Shift+n exec urxvtc -e ncmpcpp
 bindsym XF86AudioRaiseVolume exec amixer -D pulse set Master 5%+ unmute
 bindsym XF86AudioLowerVolume exec amixer -D pulse set Master 5%- unmute
 bindsym XF86AudioMute exec amixer -D pulse set Master toggle
-bindsym XF86AudioPlay exec mpc toggle
-bindsym XF86AudioStop exec mpc stop
-bindsym XF86AudioPrev exec mpc prev
-bindsym XF86AudioNext exec mpc next
+#bindsym XF86AudioPlay exec mpc toggle
+#bindsym XF86AudioStop exec mpc stop
+#bindsym XF86AudioPrev exec mpc prev
+#bindsym XF86AudioNext exec mpc next
 
 # Window Rules
 
@@ -158,6 +158,7 @@ hide_edge_borders none
 
 # Startup programs
 
+exec --no-startup-id /home/steelcowboy/.screenlayout/extended.sh
 exec --no-startup-id /home/steelcowboy/bin/interface.sh
 exec --no-startup-id compton -b --vsync opengl
 exec --no-startup-id nm-applet
@@ -197,3 +198,4 @@ bar {
         urgent_workspace   #2f343a #900000 #ffffff
     }
 }
+
