--- a/tmux.conf
+++ b/tmux.conf
@@ -1,6 +1,6 @@
 #### COLOUR (Solarized 256)
 
-source "/usr/lib/python3.5/site-packages/powerline/bindings/tmux/powerline.conf"
+#source "/usr/lib/python3.6/site-packages/powerline/bindings/tmux/powerline.conf"
 
 # set -g status-right '#(rainbarf)'
 
@@ -37,4 +37,4 @@ set-window-option -g clock-mode-colour colour64 #green
 # 256 color
 set -g default-terminal "screen-256color"
 
-bind-key -n C-a send-prefix
+bind-key -n C-k send-prefix
