--- a/i3/config
+++ b/i3/config
@@ -105,7 +105,7 @@ bindsym $mod+Shift+c reload
 # restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
 bindsym $mod+Shift+r restart
 # exit i3 (logs you out of your X session)
-bindsym $mod+Shift+e exec i3
+bindsym $mod+Shift+e exit 
 # resize window (you can also use the mouse for that)
 mode "resize" {
         # These bindings trigger as soon as you enter the resize mode
@@ -159,9 +159,9 @@ hide_edge_borders none
 # Startup programs
 
 #exec --no-startup-id /home/steelcowboy/.screenlayout/extended.sh
-#exec --no-startup-id /home/steelcowboy/bin/interface.sh
+exec --no-startup-id /home/steelcowboy/bin/interface.sh
 exec --no-startup-id compton -b --vsync opengl
-#exec --no-startup-id nm-applet
+exec --no-startup-id nm-applet
 
 # Tweaks
 
