--- a/tmux.conf
+++ b/tmux.conf
@@ -14,7 +14,7 @@ bind-key C-t send-prefix
 bind-key -n C-k send-prefix
 
 # Options
-set -g @colors-solarized 'light'
+set -g @colors-solarized 'dark'
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
